--- a/views/about.ejs
+++ b/views/about.ejs
@@ -89,37 +89,64 @@
 <body>
     <%include header.ejs%>
 
-        <div class="my-section">
-            <div class="container text-center">
-                <h2 class="animated animated fadeIn title">About me</h2>
-                <div id="mail-container"></div>
-            </div>
 
+
+        <div class="my-section">
+                <div class="container text-center">
+                    <h2 style="margin-bottom: 4vw" class="animated animated fadeIn title">About Dat</h2>
+                    <div id="mail-container"></div>
+                </div>
+                <div class="my-section row home-section" style="padding:0;">
+                    <div class="row d-flex align-content-center flex-wrap home-section d-flex align-items-stretch">
+                        <div class="col-md-5">
             <div class="container d-flex align-items-center justify-content-center avatar-section animated fadeIn delay-025s">
                 <div class="circle-black-stroke animated floating delay-01s"></div>
                 <img src="images/about-circle.png" class="my-about animated floating delay-02s">
                 <div class="circle-green-fill animated floating delay-03s"></div>
-            </div>
+            </div>                        </div>
+                        <div class="col-md-7 d-flex align-content-center flex-wrap name-section">
+                        <p class="greeting animated fadeIn delay-05s">A Product Maker combined of Tech, Design and Motion.</p>
+                                                <p class="animated fadeIn delay-05s">Hi, I’m
+                                                    <span class="green">Quoc-Dat Truong</span>.
+ Currently, I’m a former <span class="green">Web Engineer, Product Designer</span> turned <span class="green">Product
+                                                        Owner</span>. You can download my <a href="Curriculum Vitae - Trương Quốc Đạt.pdf" class="green-link"
+                                                        download>CV</a>.
+                                                    Also, check out more shots on <a href="https://dribbble.com/tqdat99" class="green-link" target="_blank">Dribbble</a>
+                                                    or <a href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
+                                                    <br /> Wish you a nice day!
+                                                    
+                                                </p>
+                                                <a href="/works" >
+                                                                            <div class="buttons">
+                                                                                <button href="/works" class="raise">Check out my works</button>
+                                                                            </div></a>
 
-            <div class="about-section">
-                <div class="row">
-                    <div class="col-md-6 about-col">
-                        <p class="greeting right-align animated fadeIn delay-05s">It’s been a pleasure meeting you</p>
-                    </div>
-                    <div class="col-md-6 d-flex align-content-center flex-wrap col-title animated fadeIn delay-075s about-col">
-                        <p>Hi, I’m
-                            <span class="green">Quoc-Dat Truong</span>.
-                        </p>
-                        <p> I'm a Vietnamese boy. I was born on May 13th 1999. I’m studying software development at Facaulty of Information Technology, University of Science, Vietnam National University. I’m now looking for an internship as a <span class="green">product designer</span>                            or a
-                            <span class="green">web developer</span>. You can download my <a href="Dat-Truong-CV.pdf" class="green-link" download>CV</a> or my <a href="Dat-Truong-Graphic-portfolio.pdf" class="green-link" download>graphic design portfolio</a>.
-                            Also, check out more shots on <a href="https://dribbble.com/tqdat99" class="green-link" target="_blank">Dribbble</a> or <a href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
-                            <br/><br/>Besides, I have a special love for <span class="green">motion design</span>. I’m also available for short freelance motion projects. For example, some onboarding screens for mobile apps.
-                            <br/><br/> Wish you a nice day!
-                        </p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+                    <div class="my-section">
+
+                                                                <div id="mailContainer"></div>
+
+                        <div class="container text-center"style="padding-bottom:0px">
+                                            <div class="container text-center">
+                                                <h2 style="margin-bottom: 2vw"  class="animated animated fadeIn title">Let's connect</h2>
+                                                <div id="mail-container"></div>
+                                            </div>
+                        </div>
+                            <div class="contact-section animated fadeIn delay-01s justify-content-center align-content-center flex-wrap">
+                                <p class="animated fadeIn delay-02s">Say hi to me through <a
+                                        href="mailto:tqdat99@gmail.com?Subject=Hi" target="_top" class="green-link">tqdat99@gmail.com</a> or
+                                    <a href="https://www.facebook.com/tqdat99" class="green-link" target="_blank">Facebook</a>.
+                                    </br>Otherwise, check out my <a href="https://www.linkedin.com/in/tqdat99/" class="green-link"
+                                        target="_blank">Linkedin</a>,
+                                    <a href="https://dribbble.com/tqdat99" class="green-link" target="_blank">Dribbble</a>, <a
+                                        href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
+                                </p>
+
+                            </div>
+                                    </div>
         <%include footer.ejs%>
 
             <!-- <script src='https://labs.nearpod.com/bodymovin/demo/markus/halloween/lottie.min.js'></script> -->
