--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -90,12 +90,11 @@
     <%include header.ejs%>
 
         <div class="single-fold">
-            <div class="my-section" style="height: 100%; padding-top: 0;">
+            <div class="my-section" style="height: 100%">
                 <div class="contact-section animated fadeIn delay-01s justify-content-center align-content-center flex-wrap">
-                    <div id="mailContainer"></div>
-                    <p class="contact animated fadeIn delay-02s">You can say hi to me through <a href="mailto:tqdat99@gmail.com?Subject=Hi" target="_top" class="green-link">tqdat99@gmail.com</a> or <a href="https://www.facebook.com/tqdat99" class="green-link" target="_blank">Facebook</a>.
-                        </br>Otherwise, check out my <a href="https://www.linkedin.com/in/tqdat99/" class="green-link" target="_blank">Linkedin</a>,
-                        <a href="https://dribbble.com/tqdat99" class="green-link" target="_blank">Dribbble</a>, <a href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
+                    <div id="mailContainer" ></div>
+                    <p class="contact animated fadeIn delay-02s">You can say hi to me through <a href="mailto:tqdat99@gmail.com?Subject=Hi" target="_top" class="green-link">tqdat99@gmail.com</a>, <a href="https://www.linkedin.com/in/tqdat99/" class="green-link" target="_blank">Linkedin</a> or <a href="https://www.facebook.com/tqdat99" class="green-link" target="_blank">Facebook</a>.
+                        </br>Otherwise, check out my <a href="https://dribbble.com/tqdat99" class="green-link" target="_blank">Dribbble</a>, <a href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
                     </p>
                 </div>
             </div>
