--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,32 +6,26 @@
     <img src="/images/menu.svg" class="hamburger" onclick="openNav()">
     <ul class="nav navbar-options">
         <li class="nav-item">
-            <a id="home" class="nav-link p-2 navbar-p navbar-option" href="/">Home</a>
+            <a id="home" class="nav-link p-2 navbar-p navbar-option" href="/">About</a>
         </li>
         <li class="nav-item">
             <a id="works" class="nav-link p-2 navbar-p navbar-option" href="/works">Works</a>
         </li>
-        <li class="nav-item">
-            <a id="about" class="nav-link p-2 navbar-p navbar-option" href="/about">About</a>
-        </li>
-        <li class="nav-item">
-            <a id="contact" class="nav-link p-2 navbar-p navbar-option" href="/contact">Contact</a>
-        </li>
+                <li class="nav-item">
+                    <a id="contact" class="nav-link p-2 navbar-p navbar-option" href="/contact">Contact</a>
+                </li>
     </ul>
 </div>
 <div id="mySidebar" class="sidebar hamburger">
     <ul id="mySidebarOptions" class="nav d-flex align-items-end flex-column">
         <li class="nav-item">
-            <a id="sidenav-home" class="sidebar-option" href="/">Home</a>
+            <a id="sidenav-home" class="sidebar-option" href="/">About</a>
         </li>
         <li class="nav-item">
             <a id="sidenav-works" class="sidebar-option" href="/works">Works</a>
         </li>
-        <li class="nav-item">
-            <a id="sidenav-about" class="sidebar-option" href="/about">About</a>
-        </li>
-        <li class="nav-item">
-            <a id="sidenav-contact" class="sidebar-option" href="/contact">Contact</a>
-        </li>
+                <li class="nav-item">
+                    <a id="sidenav-works" class="sidebar-option" href="/contact">Contact</a>
+                </li>
     </ul>
 </div>
