--- a/views/works.ejs
+++ b/views/works.ejs
@@ -100,6 +100,20 @@
             <div class="project-container">
                 <div class="row project-section">
                     <div class="col-md-6 project-thumbnail-section">
+                        <a href="WeShare - Brand Identity.pdf" target="_blank">
+                            <div class="square project-0 animated fadeInUpShort delay-025s">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-6 d-flex align-content-center flex-wrap title-section">
+                        <a href="WeShare - Brand Identity.pdf" class="project-title animated fadeInUpTitle delay-05s"
+                            target="_blank">Brand Identity Design for WeShare - A Donation Platform from Daily Consumption</a>
+                        <a href="WeShare - Brand Identity.pdf" class="my-link arrow animated fadeInUp delay-05s" target="_blank">read
+                            more</a>
+                    </div>
+                </div>
+                <div class="row project-section">
+                    <div class="col-md-6 project-thumbnail-section">
                         <a href="https://medium.com/@tqdat99/how-we-won-the-facebook-developer-circles-innovation-challenge-ab83226c45e4" target="_blank">
                             <div class="square project-1 animated fadeInUpShort delay-025s">
                             </div>
@@ -110,7 +124,6 @@
                         <a href="https://medium.com/@tqdat99/how-we-won-the-facebook-developer-circles-innovation-challenge-ab83226c45e4" class="my-link arrow animated fadeInUp delay-05s" target="_blank">read more</a>
                     </div>
                 </div>
-
                 <div class="row project-section">
                     <div class="col-md-6 project-thumbnail-section">
                         <a href="https://www.notion.so/New-look-new-story-xotours-vn-9a8bb78953cf41ff85e0612fb389298d" target="_blank">
