--- a/views/home.ejs
+++ b/views/home.ejs
@@ -111,16 +111,19 @@
                             <span class="green">Quoc-Dat Truong</span>.
                             Currently, I’m a former <span class="green">Web Engineer, Product Designer</span> turned
                             <span class="green">Product
-                                Owner</span>. You can download my <a href="Curriculum Vitae - Trương Quốc Đạt.pdf"
+                                Owner</span>, based in Ho Chi Minh City, Vietnam. <!-- You can download my <a href="Curriculum Vitae - Trương Quốc Đạt.pdf"
                                 class="green-link" download>CV</a>.
                             Also, check out more shots on <a href="https://dribbble.com/tqdat99" class="green-link"
                                 target="_blank">Dribbble</a>
                             or <a href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
-                            <br /> Wish you a nice day!
+                            <br /> Wish you a nice day! -->
 
                         </p>
                         <a href="/works" class="button">
                                 <button href="/works" class="raise">Check out my works</button>
+                        </a>
+                        <a href="Curriculum Vitae - Trương Quốc Đạt.pdf" class="button">
+                            <button href="/works" class="raise secondary">Download my CV</button>
                         </a>
                     </div>
                 </div>
