--- a/views/home.ejs
+++ b/views/home.ejs
@@ -122,7 +122,7 @@
                         <a href="/works" class="button">
                                 <button href="/works" class="raise">Check out my works</button>
                         </a>
-                        <a href="Curriculum Vitae - Trương Quốc Đạt.pdf" class="button">
+                        <a href="TruongQuocDat-CV.pdf" class="button">
                             <button href="/works" class="raise secondary">Download my CV</button>
                         </a>
                     </div>
