--- a/views/home.ejs
+++ b/views/home.ejs
@@ -108,10 +108,9 @@
                         <p class="greeting ">A Product Maker combined of Tech, Design and
                             Motion</p>
                         <p class="animated fadeIn delay-05s">Hi, I’m
-                            <span class="green">Quoc-Dat Truong</span>.
-                            Currently, I’m a former <span class="green">Web Engineer, Product Designer</span> turned
-                            <span class="green">Product
-                                Owner</span>, based in Ho Chi Minh City, Vietnam. <!-- You can download my <a href="Curriculum Vitae - Trương Quốc Đạt.pdf"
+                            <span class="green">Quoc-Dat Truong</span>,
+                             a <span class="green">Product Owner</span>, former
+                            <span class="green">Product Designer</span>, based in Ho Chi Minh City, Vietnam. <!-- You can download my <a href="Curriculum Vitae - Trương Quốc Đạt.pdf"
                                 class="green-link" download>CV</a>.
                             Also, check out more shots on <a href="https://dribbble.com/tqdat99" class="green-link"
                                 target="_blank">Dribbble</a>
